# ICPPROJ2026

./: .gitignore  Doxyfile  Makefile  README.md  README.txt  ZadaniICP.md  debug.hpp  interp.cpp  interp.hpp  misc.cpp  misc.hpp  petri.cpp  petri.hpp  place.cpp  program.cpp  scripting_helper.cpp  scripting_helper.hpp  transition.cpp
examples/: loop.pnet  loop2.pnet  placeaction.pnet
gui/: CMakeLists.txt  Makefile  TODOs.txt  editorstate.cpp  editorstate.hpp  geninterp.cpp  geninterp.hpp  items.h  items.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  mw_toolbars.cpp  petriscene.cpp  petriscene.h  petriscene.hpp  qtinterp.cpp  qtinterp.h  qtinterp.hpp  styles.hpp  terminaltab.hpp  theme.cpp  theme.hpp  todo.txt  udpconnector.cpp  udpconnector.hpp  udpreceiver.cpp  udpreceiver.hpp
src/: Doxyfile  Makefile  debug.hpp  guiconnector.cpp  guiconnector.hpp  interp.cpp  interp.hpp  misc.hpp  petri.hpp  place.cpp  program.cpp  scripting_helper.cpp  scripting_helper.hpp  transition.cpp
src/gui/: CMakeLists.txt  editorstate.cpp  editorstate.hpp  geninterp.cpp  geninterp.hpp  items.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mw_toolbars.cpp  petriscene.cpp  petriscene.hpp  picojson.h  styles.hpp  terminaltab.hpp  theme.cpp  theme.hpp  todo.txt  udpconnector.cpp  udpconnector.hpp  variableeditor.cpp  variableeditor.hpp
